--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "proxy": "http://localhost:4000",
+  "proxy": "https://solid-clock.onrender.com",
   "name": "web-course-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fvilers/disable-react-devtools": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
